test/testdata/while/continue_inside_nested_function_error.lox
while (true) {
  fun c() {
    // error: 'continue' can only be used inside a loop
    // lint error: 'continue' can only be used inside a loop
    continue;
  }
  c();
  break;
}
